bin/testsuite/tests/compiler/src/errors/compiler3940.swg
//#global testerror

func toto(x: &s32)
{
    @assert(x == 2)
}

//#[Swag.PrintBc]
#test
{
    var a = 2
    toto(&a)
}
